--- a/ImageChunker/ImageChunker.csproj
+++ b/ImageChunker/ImageChunker.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{5F1F03C5-AC12-437E-9F7C-97968E4EDD7E}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ImageSplitter</RootNamespace>
-    <AssemblyName>ImageSplitter</AssemblyName>
+    <RootNamespace>ImageChunker</RootNamespace>
+    <AssemblyName>ImageChunker</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
